# alm-study

./: .flake8  .gitignore  LICENSE.md  README.md  pyproject.toml
alm/: alm.yaml  submit.batch
alm_study/: __init__.py  __main__.py  plotter.py  project.mplstyle  read_data.py
case/: alm.inp  submit.batch
case/fast_inp/: nrel5mw.fst
refdata/: DTU_Data_Vaxial  DTU_Data_alpha  DTU_Data_drag  DTU_Data_lift  JHU_Data_Vaxial  JHU_Data_alpha  JHU_Data_drag  JHU_Data_lift  KUL_Data_Vaxial  KUL_Data_alpha  KUL_Data_drag  KUL_Data_lift  NREL_Data_Vaxial  NREL_Data_alpha  NREL_Data_drag  NREL_Data_lift
