[tool.poetry]
name = "alm-study"
version = "0.1.0"
description = "actuator line model study for amr-wind"
authors = ["Marc Henry de Frahan <marc.henrydefrahan@nrel.gov>"]
license = "Apache v2"
readme = "README.md"
packages = [{include = "alm_study"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
pep8-naming = "^0.13.3"
flake8-docstrings = "^1.7.0"
flake8-use-fstring = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plot = "alm_study.plotter:main"

[tool.black]
line-length = 88
target-version = ['py310']
preview = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88