[tool.poetry]
name = "alm-study"
version = "0.1.0"
description = "actuator line model study for amr-wind"
authors = ["Marc Henry de Frahan <marc.henrydefrahan@nrel.gov>"]
license = "Apache v2"
readme = "README.md"
packages = [{include = "alm_study"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plot = "alm_study.plotter:main"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # pydocstyle
    "D",
    # pep8-naming
    "N",
    # mccabe
    "C",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # flynt
    "FLY",
    # isort
    "I",
]
ignore = ["D203", "D212"]